- -> Removed
! -> Note

03-Dec-2010 Mark Dexter
# [#23133] Back end edit screens need ACL
# [#23562] Categories & Menus Batch ACL checks missing
# [#23554] Alternative layout example (Elin Waring)
# [#23558] Customer Group cannot save article from category list
# [#23590] Clean up commented code in weblinks (Elin Waring)
# [#23169] Remove the border and frameborder attributes. (Rouven Weßling)

03-Dec-2010 Christophe Demko
 # [#22033] Apostrophe du mode hors ligne

03-Dec-2010 Jean-Marie Simonet
 $ Modifications of the installation ini files.
 # [#22351] component messages - my settings wrong display. Thanks Andrea.
 # [#23635] "Debug Permissions Report" buttons improvement. Thanks Dennis.
 # [#23636] Invalid using of JLIB_APPLICATION_ERROR_UNHELD_ID. Thanks Dennis.
 # [#23608] Sort by user group 500 error. Thanks Mark. Temporary fix.
 # [#23492] Aria-invalid missing on some invalid inputs. Thanks Andrea.

02-Dec-2010 Mark Dexter
# Typo in language file

02-Dec-2010 Christophe Demko
 # [#23615] Implementing tooltip for the filters settings in Content Options (Jean-Marie Simonet)
 # [#23607] Profile fields not displaying in profile form. (Elin Waring)
 # [#23611] The extension manager does *not* display messages when uninstalling

02-Dec-2010 Jean-Marie Simonet
 # [#23605] Adding the string Select in the batch dropdowns
 # [#23587] com_content archive template produces invalid markup. Thanks Bill.
 # [#23613] Adding a tooltip to Select access levels in the batch layouts

01-Dec-2010 Christophe Demko
 # [#23581] Component installer does not use the key from the menu tag
 # [#23534] Method signatures don't match causing PHP strict errors - Features model populateState (Ian MacLennan)
 # [#23533] Method signatures don't match causing PHP strict errors - articles model populate state (Ian MacLennan)

01-Dec-2010 Jean-Marie Simonet
 $^ Enabling custom translation of types in installer messages